# generate_sql

./: Cargo.toml  README.md
examples/: sql.rs
src/: lib.rs
