[package]
name = "generate_sql"
version = "0.1.0"
edition = "2021"
authon = "ruomeng"
license = "MIT OR Apache-2.0"
description = "Generate SQL according to struct"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0.43"
chrono = "0.4.20"