[package]
name = "generate_sql"
version = "0.1.4"
edition = "2021"
authon = "ruomeng"
license = "MIT OR Apache-2.0"
description = "Generate SQL according to struct"
keywords = ["sql", "generate","生成sql语句"]
repository = "https://github.com/dream45678/generate_sql"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0.43"
chrono = "0.4.20"