[package]
name = "generate_sql"
version = "0.1.63"
edition = "2021"
authon = "ruomeng"
license = "MIT OR Apache-2.0"
description = "Generate SQL according to struct"
keywords = ["generate_sql","database","mysql","postgres","sqlite"]
repository = "https://github.com/dream45678/generate_sql"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 2 
overflow-checks = false 

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
quote = "1.0"
proc-macro2 = "1.0.43"